# nodemcu

Scripts/: data.txt  init.lua  softuart.lua  uart_0.lua
Scripts/AP_scam/: test.lua
Scripts/AccessPoint/: application.lc  application.lua  client.lua  server.lua  sjson-streaming.lua  zero
Scripts/doorSensors/: application.lua  credentials.lc  gpio_functions.lua  init.lua  mqtt_functions.lua  sntp_functions.lua
Scripts/doorSensors/Server/: init.lua  jlvg_wifi.lua  logger.lua  server.lua
Scripts/gps_comm/: data.txt  data_01072021.txt  gprmc.txt  gps_comm.db  gps_comm.dbb.sqbpro  init.lua  led.lua  log.lua  nmea.cpp  nmea.h  test_button.lua  uart_0.lua
Scripts/gps_comm/ap_locations/: CMakeLists.txt
Scripts/gps_comm/ap_locations/src/: main.cpp
Scripts/gps_comm/ap_locations/src/parser/: accessPoint.cpp  accessPoint.hpp  dataParser.cpp  dataParser.hpp  gpsData.cpp  gpsData.hpp  parserHelper.cpp  parserHelper.hpp
Scripts/gps_comm/ap_locations/src/sqlite/: sqlHelper.cpp  sqlHelper.hpp  sqlite3.h
Scripts/gps_comm/ap_locations/src/tools/: argumentsHelper.cpp  argumentsHelper.hpp  stringTools.cpp  stringTools.hpp
Scripts/gps_comm/data.d/: data_1.txt  data_100621.txt  data_2.txt  data_3.txt  data_more_tests.txt  data_to_airport_to_sadako.txt  data_vilanova_18_jul_2021.txt  db_creation.sql  emptyDB.db  gprmc  gps_comm.db  testDB.db
Scripts/gps_comm/lua/: log.lua  test_button.lua  uart_0.lua
Scripts/initialTest/: credentials.lua  init.lua  mqtt_test.lua
Scripts/mac_scanner/: loc  test.lua
Scripts/testsESP8266/: init.lua  test_button.lua
(+12 files in other folders)
